# python

./: .coverage  .gitignore  .pre-commit-config.yaml  app.db  pyproject.toml
src/orders_app/: closures.py  decoradores.py  generador_lotes.py  manager_temporizacion.py  orders.json  read_json.py  statistics_utils.py
src/orders_app/api/: auth.py  deps.py  main.py
src/orders_app/api/routers/: orders.py
src/orders_app/api/schemas/: order.py
src/orders_app/application/: use_cases.py
src/orders_app/data/: customers.csv  model.joblib  resultado.json  ventas.csv
src/orders_app/db/: database.py  init_db.py  models.py  test_insert.py
src/orders_app/domain/: entities.py  notification_port.py  pricing.py  repositories.py  services.py
src/orders_app/http/: client.py
src/orders_app/infrastructure/: memory_repository.py  notification_http.py  payment_adapter.py  sql_repository.py
src/orders_app/ml/: predict.py  train_model.py
src/orders_app/objetos_data_model/: composicion.py  conversion_to_entity.py  dunder_methods.py  modelo_pydantic.py  orden_dataclass.py  orden_tipado.py  productos.py
src/orders_app/performance/: async_fetch.py  async_fetch_semaphore.py  cpu_test.py  sync_fetch.py
src/orders_app/standard_lib/: leer_csv.py  procesar_ventas.py
src/orders_app/tests/: conftest.py  fake_notifier.py  test_orders.py  test_use_case.py
